dataset1235/2025-2/1379599236/users/1049735031/executions/2110095464_2862582401.log
== SUBMISSION (2025-08-25 19:47:19)
-- CODE: 
nome =input()
rep = int(input())

f = ("Abra + nome +" ") *rep

print(f)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
-- ERROR:
File "XXXX", line 4
    f = ("Abra + nome +" ") *rep
                         ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
-- ERROR:
File "XXXX", line 4
    f = ("Abra + nome +" ") *rep
                         ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- ERROR:
File "XXXX", line 4
    f = ("Abra + nome +" ") *rep
                         ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
-- ERROR:
File "XXXX", line 4
    f = ("Abra + nome +" ") *rep
                         ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- ERROR:
File "XXXX", line 4
    f = ("Abra + nome +" ") *rep
                         ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
-- ERROR:
File "XXXX", line 4
    f = ("Abra + nome +" ") *rep
                         ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:46:50)
-- CODE: 
nome =input()
rep = int(input())

f = ("Abra + nome +" ") *rep

print(f)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
-- ERROR:
File "XXXX", line 4
    f = ("Abra + nome +" ") *rep
                         ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
-- ERROR:
File "XXXX", line 4
    f = ("Abra + nome +" ") *rep
                         ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- ERROR:
File "XXXX", line 4
    f = ("Abra + nome +" ") *rep
                         ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
-- ERROR:
File "XXXX", line 4
    f = ("Abra + nome +" ") *rep
                         ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- ERROR:
File "XXXX", line 4
    f = ("Abra + nome +" ") *rep
                         ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
-- ERROR:
File "XXXX", line 4
    f = ("Abra + nome +" ") *rep
                         ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:45:40)
-- CODE: 
nome =input()
rep = int(input())

f = ("Abra + nome ") *rep
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
None
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
None
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
None
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
None
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
None
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:47:43)
-- CODE: 
nome =input()
rep = int(input())

f = ("Abra "+ nome +" ") *rep

print(f)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
Abra casa Abra casa Abra casa
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
Abra porta Abra porta Abra porta Abra porta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:45:35)
-- CODE: 
nome =input()
rep = int(input())

f = ("Abra + nome ") *rep
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
None
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
None
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
None
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
None
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
None
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
